Fixes #1756 ClayCSS Mixins `clay-container` added options `align-items`, `bg`, `bg-image`, `bg-position`, `bg-size`, `border-radius`, `flex-basis`, `flex-direction`, `flex-grow`, `flex-shrink`, `flex-wrap`, `height`, `justify-content`, `max-height`, `min-height`, `order`, `width`
Fixes #1756 ClayCSS Mixins added mixin `clay-title` as a shortcut for `clay-text-typography`

Fixes #1756 ClayCSS mixins `clay-button-variant` added `bottom`, `position`, `left`, `right`, `top`

--- a/packages/clay-css/src/scss/mixins/_grid.scss
+++ b/packages/clay-css/src/scss/mixins/_grid.scss
@@ -19,44 +19,78 @@
 	$breakpoint-up: map-get($map, breakpoint-up);
 	$breakpoint-down: setter(clay-breakpoint-prev($breakpoint-up), null);
 
+	$align-items: map-get($map, align-items);
+	$bg: map-get($map, bg);
+	$bg-image: map-get($map, bg-image);
+	$bg-position: map-get($map, bg-position);
+	$bg-size: map-get($map, bg-size);
 	$border-color: map-get($map, border-color);
+	$border-radius: map-get($map, border-radius);
 	$border-style: map-get($map, border-style);
 	$border-width: map-get($map, border-width);
 	$display: map-get($map, display);
+	$flex-basis: map-get($map, flex-basis);
+	$flex-direction: map-get($map, flex-direction);
+	$flex-grow: map-get($map, flex-grow);
+	$flex-shrink: map-get($map, flex-shrink);
+	$flex-wrap: map-get($map, flex-wrap);
 	$float: map-get($map, float);
+	$height: map-get($map, height);
+	$justify-content: map-get($map, justify-content);
 	$margin-bottom: map-get($map, margin-bottom);
 	$margin-left: map-get($map, margin-left);
 	$margin-right: map-get($map, margin-right);
 	$margin-top: map-get($map, margin-top);
+	$max-height: map-get($map, max-height);
 	$max-width: map-get($map, max-width);
+	$min-height: map-get($map, min-height);
 	$min-width: map-get($map, min-width);
+	$order: map-get($map, order);
 	$padding-bottom: map-get($map, padding-bottom);
 	$padding-left: map-get($map, padding-left);
 	$padding-right: map-get($map, padding-right);
 	$padding-top: map-get($map, padding-top);
 	$position: map-get($map, position);
+	$width: map-get($map, width);
 
 	$padding-bottom-mobile: map-get($map, padding-bottom-mobile);
 	$padding-left-mobile: map-get($map, padding-left-mobile);
 	$padding-right-mobile: map-get($map, padding-right-mobile);
 	$padding-top-mobile: map-get($map, padding-top-mobile);
 
+	align-items: $align-items;
+	background-color: $bg;
+	background-image: $bg-image;
+	background-position: $bg-position;
+	background-size: $bg-size;
 	border-color: $border-color;
+	border-radius: $border-radius;
 	border-style: $border-style;
 	border-width: $border-width;
 	display: $display;
+	flex-basis: $flex-basis;
+	flex-direction: $flex-direction;
+	flex-grow: $flex-grow;
+	flex-shrink: $flex-shrink;
+	flex-wrap: $flex-wrap;
 	float: $float;
+	justify-content: $justify-content;
+	height: $height;
 	margin-bottom: $margin-bottom;
 	margin-left: $margin-left;
 	margin-right: $margin-right;
 	margin-top: $margin-top;
+	max-height: $max-height;
 	max-width: $max-width;
+	min-height: $min-height;
 	min-width: $min-width;
+	order: $order;
 	padding-bottom: $padding-bottom;
 	padding-left: $padding-left;
 	padding-right: $padding-right;
 	padding-top: $padding-top;
 	position: $position;
+	width: $width;
 
 	@if($breakpoint-down) {
 		@include media-breakpoint-down($breakpoint-down) {
